# sassysquad-backend

./: .env  .gitignore  README.md  eslint.config.mjs  mise.toml  package-lock.json  package.json  pyproject.toml  setup.ts  swagger.json  test.html  tsconfig.json  vercel.json
.github/workflows/: build_script.yml  eslint.yml
api/: index.ts  webhook.ts
api-docs/: saasysquadswagger.json  swagger-initializer.js
ml_api/: main.py  model.py  requirements.txt
src/: routes.ts
src/api/: index.ts
src/application/: agentic_application.ts  analytics_application.ts  health_application.ts  item_application.ts  order_application.ts  user_application.ts
src/database/: client.ts  queries.ts  schema.sql  setup.ts
src/database/queries/: health_queries.ts  item_queries.ts  order_queries.ts  user_queries.ts
src/repository/: order_queries.ts
src/routes/: health_routes.ts  user_routes.ts
src/types/: combined_types.ts  item.ts  order.ts  user.ts
src/utils/: db.ts  jwt_config.ts  jwt_helpers.ts  model.py
src/utils/pictures/: unnamed (4).jpg:Zone.Identifier
tests/: cart.test.ts  health.test.ts  items.test.ts  orders.test.ts  queries.test.ts  test_helper.ts  users.test.ts
tests/application/: cart.test.ts  health.test.ts  items.test.ts  orders.test.ts  users.test.ts  vouchers.test.ts
tests/queries/: health_queries.test.ts  item_queries.test.ts  order_queries.test.ts  user_queries.test.ts
