[project]
name = "sassysquad-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.8",
  "mmh3>=5.2.1",
  "onnxmltools>=1.16.0",
  "packaging>=26.0",
  "polars>=1.39.3",
  "scikit-learn>=1.7.2",
  "skl2onnx>=1.20.0",
  "xgboost>=3.2.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.1",
  "vercel>=0.2.1",
  "pygam>=0.9.0",
  "pandas>2.2.2",
]
